fix: create the module project