@@ -27,50 +27,43 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-    // Log4j2
+    // Log4j2:
     implementation(platform("org.apache.logging.log4j:log4j-bom:2.25.4"))
     implementation("org.apache.logging.log4j:log4j-api")
     implementation("org.apache.logging.log4j:log4j-core")
     implementation("org.apache.logging.log4j:log4j-slf4j2-impl")
     implementation("com.lmax:disruptor:4.0.0")
 
-    // Ikonli, POI e Jackson
+    // Ikonli, POI and Jackson:
     implementation("org.kordamp.ikonli:ikonli-javafx:12.4.0")
     implementation("org.kordamp.ikonli:ikonli-fontawesome6-pack:12.4.0")
     implementation("org.apache.poi:poi-ooxml:5.5.1")
-    implementation("tools.jackson.core:jackson-databind:3.1.2")
+
+    implementation("tools.jackson.core:jackson-databind:3.1.2") {
+        exclude(group = "org.jspecify", module = "jspecify")
+    }
 }
 
 application {
-    mainClass.set("br.com.getronics.Main")
+    mainClass.set("br.com.getronics.Main") // Mantém o seu ponto de entrada correto
     applicationDefaultJvmArgs = listOf(
         "-Djavafx.animation.fullspeed=true",
         "-Dprism.text=native",
-        "-Dprism.lcdtext=true"
+        "-Dprism.lcdtext=true",
+        "--enable-native-access=javafx.graphics"
     )
 }
 
-tasks.register<Jar>("fatJar") {
+tasks.register<Copy>("copyDependencies") {
     group = "build"
-    description = "JAR único com todas as dependências para o programa rodar."
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    description = "Copia as dependências do runtimeClasspath para a pasta build/libs para o jpackage."
 
-    manifest {
-        attributes(
-            "Main-Class" to "br.com.getronics.Main",
-            "Multi-Release" to "true"
-        )
-    }
+    dependsOn(tasks.jar)
 
-    from(sourceSets.main.get().output)
+    from(configurations.runtimeClasspath)
+    into(layout.buildDirectory.dir("libs"))
+}
 
-    val runtimeClasspathFiles = provider {
-        configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) }
-    }
-    from(runtimeClasspathFiles)
-
-    exclude("META-INF/*.SF")
-    exclude("META-INF/*.DSA")
-    exclude("META-INF/*.RSA")
-    exclude("META-INF/LICENSE*")
+tasks.named<Jar>("jar") {
+    destinationDirectory.set(layout.buildDirectory.dir("libs"))
 }
